Style adjustments. Added img: max width general rule to prevent svg images in navbar from overflowing their containers with their initial size.

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -46,3 +46,7 @@ p {
 .caption-text {
 	color: #fff;
 }
+
+img {
+  max-width: 100%;
+}
